# comet

./: .gitignore  CMakeLists.txt  README.md
comet/: CMakeLists.txt
comet/include/comet/: application.h  assert.h  buffer.h  camera.h  cameraController.h  comet.h  commandBuffer.h  components.h  directionalLight.h  drawingContext.h  entity.h  event.h  flatColorMaterial.h  framebuffer.h  graphicApiConfig.h  indexBuffer.h  input.h  light.h  log.h  logFormatters.h  material.h  materialRegistry.h  mesh.h  nativeScript.h  phongMaterial.h  platform.h  pointLight.h  propertiesExposer.h  renderPass.h  renderer.h  resourceManager.h  scene.h  shader.h  shaderRegistry.h  spotLight.h  staticMesh.h  texture.h  textureRegistry.h  timer.h  utils.h  (+5 more)
comet/resources/shaders/: cometFlatColor.fs.glsl  cometFlatColor.vs.glsl  cometFramebufferSwapchain.fs.glsl  cometFramebufferSwapchain.vs.glsl  cometPhong.fs.glsl  cometPhong.vs.glsl  cometTest.fs.glsl  cometTest.vs.glsl  flatColor.vs.glsl
comet/src/core/: application.cpp  asserts.h  cometpch.h  log.cpp  logFormatters.h  objLoader.cpp  objLoader.h  readme.txt  resourceManager.cpp  resourceManager.h  sceneSerializer.cpp  sceneSerializer.h  singleton.h  stringUtils.cpp  stringUtils.h  window.cpp  windowImpl.h
comet/src/ecs/: scene.cpp
comet/src/events/: event.h
comet/src/rendering/: buffer.cpp  buffer.h  camera.cpp  cameraController.cpp  commandBuffer.cpp  commandBuffer.h  directionalLight.cpp  flatColorMaterial.cpp  framebuffer.cpp  framebuffer.h  graphicApiConfig.cpp  imguiWrapper.cpp  imguiWrapper.h  indexBuffer.cpp  indexBuffer.h  material.cpp  mesh.cpp  phongMaterial.cpp  pointLight.cpp  renderPass.cpp  renderer.cpp  shader.cpp  shaderRegistry.cpp  spotLight.cpp  staticMesh.cpp  texture.cpp  textureRegistry.cpp  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.cpp  vertexBufferLayout.h
comet/src/scripting/: nativeScript.cpp
comet/src/vendors/glad/include/glad/: glad.h
comet/src/vendors/glad/src/: glad.c
comet/src/vendors/imgui/imgui/: imconfig.h
cometEditor/: CMakeLists.txt  cometEditorApp.cpp  cometEditorApp.h  cometEditorScene.cpp  cometEditorScene.h  cometGameScene.cpp  cometGameScene.h  main.cpp
cometEditor/core/: imguiUtils.h  imguiWrapper.h
cometEditor/panels/: propertiesPanel.cpp  propertiesPanel.h  sceneHierarchyPanel.cpp  sceneHierarchyPanel.h
cometEditor/vendors/imgui/imgui/: imconfig.h
sandbox/: CMakeLists.txt  main.cpp  sandboxApp.cpp  sandboxApp.h  sandboxMainScene.cpp  sandboxMainScene.h  vertex.h
testScriptsLib/: CMakeLists.txt  scripts.cpp  scripts.h
